[package]
name = "helium-config-service-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
angry-purple-tiger = { version = "1", features = ["helium_crypto"]}
anyhow = "1.0.71"
dialoguer = "0.10.2"
clap = { version = "4.2.7", features = ["derive", "env"] }
futures = "0.3.28"
helium-crypto = "0.8.4"
helium-proto = { git = "https://github.com/helium/proto", branch="master", features=["services"]}
helium-lib = { git = "https://github.com/helium/helium-wallet-rs", branch = "master" }
h3o = "0"
ipnet = "2.7.2"
prost = "0.11.9"
rand = "0.8.5"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
serde_test = "1.0.162"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
tonic = { version = "0.9.2", features = ["tls", "tls-roots"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
solana-sdk = "1.18.22"
solana-client = "1.18"
solana-program = "1.18"
spl-associated-token-account = "2.3.0"
spl-token = "4.0.0"
serde_with = "3.9.0"
dirs = "5.0.1"
bincode = "1.3.3"
thiserror = "1.0"
itertools = "0.13"
async-trait = "0"

[dev-dependencies]
pretty_assertions = "1.3.0"
temp-dir = "0.1.11"

# When attempting to test proto changes without needing to push a branch you can
# patch the github url to point to your local proto repo.
#
[patch.'https://github.com/helium/proto']
helium-proto = { path = "../proto" }

[patch.'https://github.com/helium/helium-wallet-rs.git']
helium-lib = { path = "../helium-wallet-rs/helium-lib" }

