[package]
name = "helium-config-service-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
angry-purple-tiger = { version = "1", features = ["helium_crypto"] }
anyhow = "1.0"
dialoguer = "0.12"
clap = { version = "4.6", features = ["derive", "env"] }
futures = "0.3"
helium-crypto = "0.9"
helium-proto = { git = "https://github.com/helium/proto", branch = "master", features = [
    "services",
] }
h3o = { version = "0.9", features = ["serde"] }
ipnet = "2.12"
prost = "0.14"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_test = "1.0"
tokio = { version = "1.50", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
tonic = "0.14"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
pretty_assertions = "1.4"
temp-dir = "0.2"
